Corrects javadoc.